feat: non-default install example

--- a/notebook-example/import_wheel_in_fabric_example.ipynb
+++ b/notebook-example/import_wheel_in_fabric_example.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Install the wheel from default lakehouse"
+    "# Install option 1: the wheel from default lakehouse"
    ]
   },
   {
@@ -30,6 +30,45 @@
    "outputs": [],
    "source": [
     "%pip install --force-reinstall /lakehouse/default/Files/PythonUtilities/fabricutilities-1.0-py3-none-any.whl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Install option 2: the wheel from non-default lakehouse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil \n",
+    "import os \n",
+    "from pyspark import SparkFiles \n",
+    "\n",
+    "_wheel_path = \"abfss://<workspace-name>@onelake.dfs.fabric.microsoft.com/<lakehousename>.Lakehouse/Files/PythonUtilities/fabricutilities-1.0-py3-none-any.whl\" \n",
+    "\n",
+    "sc.addFile(_wheel_path) \n",
+    "\n",
+    "_src_path = SparkFiles.get(\"fabricutilities-1.0-py3-none-any.whl\") \n",
+    "\n",
+    "_target_file_path = mssparkutils.nbResPath + \"/builtin/fabricutilities-1.0-py3-none-any.whl\" \n",
+    "\n",
+    "os.remove(_target_file_path) \n",
+    "\n",
+    "shutil.move(_src_path, _target_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install --force-reinstall builtin/fabricutilities-1.0-py3-none-any.whl"
    ]
   },
   {
